# disstest

./: .gitignore  restart_training.sh  train.slurm
binpack/: Cargo.toml  README.md
binpack/examples/: binpack_reader.rs  binpack_writer.rs
binpack/img/: binpack(2).excalidraw
binpack/pybinpack/: Cargo.toml  README.md  pyproject.toml
binpack/pybinpack/src/: batch.rs  error.rs  lib.rs  skip.rs  stream.rs
binpack/src/: lib.rs  main.rs
binpack/src/chess/: attacks.rs  bitboard.rs  castling_rights.rs  color.rs  coords.rs  hyperbola.rs  mod.rs  move.rs  piece.rs  piecetype.rs  position.rs
binpack/src/common/: arithmetic.rs  binpack_error.rs  compressed_move.rs  compressed_position.rs  compressed_training_file_reader.rs  compressed_training_file_writer.rs  entry.rs  mod.rs
binpack/src/reader/: bitreader.rs  compressed_reader.rs  mod.rs  move_score_list_reader.rs
binpack/src/writer/: bitwriter.rs  compressed_writer.rs  mod.rs  move_score_list.rs
binpack/test/: ep1.binpack
marlinflow/marlinformat/: Cargo.toml
marlinflow/parse/: Cargo.toml
marlinflow/trainer/: dataloader.py  main.py  replay.py  requirements.txt
marlinflow/utils/: Cargo.toml
trainer/: dataloader.py  main.py
